Fix AAA contrast regulations

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 :root {
   --background: #030203;
   --text-color: #FEF0FE;
-  --primary: #097FF6;
+  --primary: #0956AA;
 }
 
 main {
